# libgail-gnome

./: Makefile  README.md
src/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
src/gail-gnome/: Makefile.am  Makefile.in  bonobo-accessibility-init.c  bonobo-control-accessible.c  bonobo-control-frame-accessible.c  bonobo_plug_atk_object.c  bonobo_plug_atk_object.h  bonobo_plug_atk_object_factory.c  bonobo_plug_atk_object_factory.h  bonobo_socket_atk_object.c  bonobo_socket_atk_object.h  bonobo_socket_atk_object_factory.c  bonobo_socket_atk_object_factory.h  gail-gnome-debug.h  panel-applet-atk-object-factory.c  panel-applet-atk-object-factory.h  panel-applet-atk-object.c  panel-applet-atk-object.h
src/test/: Makefile.am  Makefile.in  test-gail-gnome.c
